# SpENN

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  ENVIRONMENT.md  README.md  RELEASE_NOTES.md  TODO.md  USER_TODO.md  comments.md  main.typ  pyproject.toml  run.py  spenn_project_instructions.md  train.py  typechecked.py
.codex/rules/: default.rules  default.rules.bak
.github/workflows/: docs.yml
configs/: TODO.md  config.yaml  instructions.md  typecheck.yaml
configs/encoder/: basic.yaml  cusp.yaml
configs/hamiltonian/: electronic.yaml
configs/hardware/: ddp.yaml  single_gpu.yaml
configs/logging/: wandb.yaml
configs/model/: spenn_det.yaml  spenn_det_pf.yaml  spenn_pf.yaml
configs/readout/: det_pf_sum.yaml  determinant.yaml  pfaffian.yaml
configs/sampler/: mala.yaml  metropolis.yaml
docs/: Makefile  README.md  conf.py  development.rst  index.rst  spenn_core.md
experiments/: README.md  __init__.py  exec-plan-split.md  experiments.typ  instructions.md
scripts/: TODO.md  debug_equivariance.py  debug_local_energy.py  eval.py  instructions.md  sample.py  train.py  typechecked.py
spenn/: TODO.md  __init__.py  artifacts.py  callback.py  config.py  dependencies.py  instructions.md  logging.py  metrics_naming.md  naming.py  optional_dependencies.md  registry.py  reps_nn_data_structure_implementation.md  run.py  runner.py  trace.py  types.py
tests/: README.md  TODO.md  __init__.py  conftest.py  helpers.py  instructions.md  test_activation_gate.py  test_antisymmetry.py  test_branching.py  test_cusp.py  test_data_structures.py  test_electron_pair_encoder.py  test_equivariance.py  test_feature_dict.py  test_intertwiners.py  test_local_energy.py  test_m2_spechtmp_scaffold.py  test_mlp.py  test_pfaffian.py  test_phase1_integration.py  test_runtime_typecheck.py  test_sampling_vmc.py  test_skeleton.py  test_spechtmp_m2_middle.py
(+639 files in other folders)
