[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spenn"
version = "0.0.1"
description = "Specht-module equivariant neural network fermionic wavefunctions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "hydra-core",
  "numpy",
  "omegaconf",
]

[project.optional-dependencies]
cpu = [
  "torch",
]
cu126 = [
  "torch",
]
cu128 = [
  "torch",
]
cu130 = [
  "torch",
]
test = [
  "pytest",
  "typeguard>=4",
]
wandb = [
  "wandb>=0.17",
]
submitit = [
  "hydra-submitit-launcher>=1.2",
]

[dependency-groups]
dev = [
  "matplotlib>=3.10.9",
  "pytest",
  "typeguard>=4",
]
docs = [
  "numpydoc>=1.7",
  "sphinx>=7.2,<8",
]

[tool.uv]
python-preference = "only-managed"
default-groups = ["dev"]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
    { extra = "cu128" },
    { extra = "cu130" }
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.setuptools.packages.find]
include = ["spenn*"]

[tool.pytest.ini_options]
markers = [
  "integration: end-to-end tests that exercise entrypoints, configs, or generated artifacts",
]
addopts = "--typeguard-packages=spenn"
